--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ python:
 install: pip install -r requirements.txt
 language: python
 script: travis_wait 30 python -m pytest tests/
+before_install:
+  - sudo apt-get install -y python-pyaudio python3-pyaudio
