--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
   - "2.7"
-install: pip install -r requirements.txt
 language: python
 script: travis_wait 30 python -m pytest tests/
-before_install:
-  - sudo apt-get install -y python-pyaudio python3-pyaudio
+before_install: sudo apt-get install -y python-pyaudio python3-pyaudio
+install: pip install -r requirements.txt
