--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 language: python
-script: travis_wait 30 python -m pytest tests/
+script: travis_wait 30 pytest tests/
 install: 
   - sudo apt-get install -y python-pyaudio python3-pyaudio
   - pip install -r requirements.txt
