--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
 language: python
 script: travis_wait 30 pytest tests/
-install: 
+before_install: 
   - sudo apt-get install -y python-pyaudio python3-pyaudio
+install:
   - pip install -r requirements.txt
