--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 language: python
 script: travis_wait 30 pytest tests/
 before_install: 
-  - sudo apt-get install -y python-pyaudio python3-pyaudio
+  - sudo apt-get install -y python-pyaudio python3-pyaudio portaudio19-dev
 install:
   - pip install -r requirements.txt
